<resources>
    <string name="app_name">HBHG</string>
    <string name="MAPAPI_KEY">AIzaSyCtKYvDu0AXJA4vG_NfEbGZFiZ2Id1TD90</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-2382414112175916/8597852981</string>
    <string name="inapp_stickerpack1">com.hbhg.stickerpack1</string>
    <string name="inapp_stickerpack2">com.hbhg.stickerpack2</string>
    <string name="inapp_stickerpack3">com.hbhg.stickerpack3</string>
    <string name="inapp_stickerpack4">com.hbhg.stickerpack4</string>
    <string name="facebook_app_id">419362608233221</string>
    <string name="hey">Hey!</string>
    <string name="didyouknow">Did You Know?</string>
    <string name="sevensecond">It Takes Just 7 Seconds To Make That Great First Impression!</string>
    <string name="tick">Tick The Boxes To Agree To The Following</string>
    <string name="date">Your Date Of Birth</string>
    <string name="sexualorient">Select Sexual Orientation</string>
    <string name="allownotification">Allow Notifications</string>
    <string name="allowlocation">Allow Location Share</string>
    <string name="allowterms">Accept Terms &amp; Conditions</string>
    <string name="allowtermsmsg">Please read and accept terms and conditions.</string>
    <string name="connectfb">Connect with Facebook</string>
    <string name="agecheck">Your age must be 18 or above.</string>
    <string name="dt">Date</string>
    <string name="music">Music</string>
    <string name="listens">Listens</string>
    <string name="food">Food</string>
    <string name="eats">Eats</string>
    <string name="interests">Interests</string>
    <string name="loves">Loves</string>
    <string name="musictitile">Add pictures to represent your favourite Music </string>
    <string name="foodtitle">Add pictures to represent your favourite Food</string>
    <string name="intereststitle">Add pictures to represent your favourite Activities</string>
    <string name="videotitle">Its Time To Make Your 7 Seconds Video To Create That Great First Impression!</string>
    <string name="videotips">Some Tips To Help You To Create A Good Video</string>
    <string name="add">Add</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google Search</string>
    <string name="cancel">Cancel</string>
    <string name="CrashMessage">Uncaught Exception</string>
    <string name="musicName">Music Name</string>
    <string name="musicph">Enter the name of music</string>
    <string name="foodName">Food Name</string>
    <string name="foodph">Enter the name of food</string>
    <string name="interestName">Interest Name</string>
    <string name="interestph">Enter the name of interest</string>
    <string name="save">&#160;&#160;&#160;&#160;Save&#160;&#160;&#160;&#160;</string>
    <string name="cacel1">&#160;&#160;&#160;&#160;Cancel&#160;&#160;&#160;&#160;</string>
    <string name="done">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Done&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="next">Next</string>
    <string name="back">Back</string>

    <string name="com_facebook_loginview_log_in_button">Continue with Facebook</string>
    <string name="com_facebook_loginview_log_in_button_long">Continue with Facebook</string>
    <string name="alldata">Please fill All Data</string>
    <string name="enteralldetail">Please enter all details to proceed.</string>
    <string name="selectvideochatroom">Please select video for chat room.</string>
    <string name="selectinviteuser">Please invite at least one user.</string>
    <string name="totallikes">Total Likes</string>
    <string name="newlikes">New Likes</string>
    <string name="blockeduser">Blocked User</string>
    <string name="posts">Posts</string>
    <string name="followers">Followers</string>
    <string name="chatrooms">CHATROOMS</string>
    <string name="notifications">Notifications</string>
    <string name="chat">CHAT NOW</string>
    <string name="loading">Please wait...</string>
    <string name="stickers">Stickers</string>
    <string name="facebookphoto">Facebook Photos</string>
    <string name="facebookvideo">Facebook Videos</string>
    <string name="norecord">No Record Found</string>
    <string name="nomsg">No Message Found</string>
    <string name="fetchvideo">Please wait..Fetch Data</string>
    <string name="matches">Matches</string>
    <string name="nochatroom">There are no any chatrooms available</string>
    <string name="noinviteuser">There are no any users available</string>
    <string name="nomatches">There are no any matches available</string>
    <string name="nomatchesmain">Change location settings to find new matches.</string>
    <string name="nofollowers">No Followers available.</string>
    <string name="nonewlikes">No New Likes available.</string>
    <string name="createroom">Create Room</string>
    <string name="tags">Tags</string>
    <string name="weblink">Web Links</string>
    <string name="name">Name</string>
    <string name="invite">Invite</string>
    <string name="golive">Go Live</string>
    <string name="validurl">Please enter valid URL</string>
    <string name="chatrooms1">ChatRooms</string>
    <string name="mychatroom">My ChatRooms</string>
    <string name="typemessage">Type a message</string>
    <string name="inviteduser">Invite User</string>
    <string name="nonotification">There are no any Notifications.</string>
    <string name="title1">God of War Ascension</string>
    <string name="title2">Assassin\'s Creed III</string>
    <string name="title3">Hitman Absolution</string>
    <string name="title4">Dishonored</string>
    <string name="search">Search</string>
    <string name="userblock">You have blocked</string>
    <string name="newuser">Hey .. You can chat when the other user has to liked you too.\nWe will notify you when they do</string>
    <string name="entertext">Please enter text</string>
    <string name="loadmore">Load More</string>
    <string name="heytitle">Hey!</string>
    <string name="mymatches">My Matches</string>
    <string name="heymessage">Hey Show your best side in the profile video to win hearts!\n\nAlso, we are giving away a brand new iPad and other exciting prizes for the best profile videos!!\n\n All the best!</string>
    <string name="ok">OK</string>
    <string name="cancelcaps">CANCEL</string>
    <string name="writeStoragePermissionDenied">The app was not allowed to write to your storage. Hence, it cannot function properly. Please consider granting it this permission.</string>
    <string name="writeStoragePermission">You need to allow access to Write External Storage</string>
    <string name="my_choice">My choice</string>

    <string name="adding_filtertoyour_video">Adding filter to your video...</string>
    <string name="creating_your_video">Creating a cool profile video for you...</string>
    <string name="creating_your_profile">Creating your profile...</string>
    <string name="pay_msg">Please tap &#34;Continue&#34; to complete your purchase.</string>
    <string name="option_1">Would you like to complete your profile to get better matches</string>
    <string name="option_2">I will complete my profile later and check out my matches now</string>
    <string name="thereare_no_mymatches">There are no My Matches found</string>

    <string name="remove_user">Remove User</string>
    <string name="visit_profile">Visit Profile</string>

    <string name="intro_text1">It takes just 7 seconds</string>
    <string name="intro_text2">to make that great first impression!</string>

    <string name="no_matches_found">Currently there are no matches around you</string>
    <string name="no_matches_found1">Change Settings / Search city above.</string>
    <string name="no_matches_found2">Or check whats happening in the chatrooms below.</string>

</resources>
