<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/rl1"
        android:layout_width="fill_parent"
        android:layout_height="?android:attr/actionBarSize" >

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="fill_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@color/textcolor"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/google"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relSearch"
        android:layout_below="@+id/rl1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:background="@color/lightgraycolor"
        android:paddingBottom="5dp"
        android:paddingEnd="4dp"
        android:paddingLeft="10dp"
        android:paddingRight="4dp"
        android:paddingStart="10dp"
        android:paddingTop="5dp" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@+id/tv_cancel"
            android:layout_toStartOf="@+id/tv_cancel"
            android:background="@drawable/searchbg"
            android:paddingBottom="5dp"
            android:paddingTop="5dp" >

            <ImageView
                android:id="@+id/imgSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:contentDescription="@string/app_name"
                android:src="@mipmap/searchicon" />

            <EditText
                android:id="@+id/inputSearch"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@+id/imgSearch"
                android:layout_toRightOf="@+id/imgSearch"
                android:background="@color/trans"
                android:hint="@string/search"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:textColorHint="@color/mediumgray">

            <requestFocus />
            </EditText>
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:text="@string/cancel"
            android:textColor="@color/textcolor"
            android:textSize="16sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_body"
        android:layout_below="@+id/relSearch"
        android:layout_above="@+id/relLoadMore"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical" >



        <GridView
            android:id="@+id/gridView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:numColumns="3"
            android:verticalSpacing="5dp"
            android:horizontalSpacing="5dp"
            android:layout_margin="5dp"
            android:stretchMode="columnWidth"
            android:scrollbars="none"
            android:gravity="center" >
        </GridView>

        <TextView
            android:id="@+id/empty"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="@string/norecord"
            android:textSize="22sp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relLoadMore"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="8dp" >

        <TextView
            android:id="@+id/txtLoadMore"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="@string/loadmore"
            android:textColor="@color/textcolor"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>

</RelativeLayout>