<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:animateLayoutChanges="true"
        >

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="fill_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@color/textcolor"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/notifications"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white" />

        <ImageView
            android:id="@+id/img_delete_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:padding="5dp"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/deleteall" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_body"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:animateLayoutChanges="true"
        >

        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@null"
            >
        </ListView>

        <TextView
            android:id="@+id/empty"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="@string/nonotification"
            android:textSize="22sp"
            android:visibility="gone"
             />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_footer"
        android:layout_width="fill_parent"
        android:layout_height="?android:attr/actionBarSize" >

        <include
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            layout="@layout/bottom_tab_bar" />
    </LinearLayout>

</LinearLayout>