<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#AA000000"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:padding="15dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true">

                <TextView
                    android:id="@+id/tTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/musicName"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/darkgray" />
                <TextView
                    android:id="@+id/tMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_below="@+id/tTitle"
                    android:fontFamily="sans-serif-light"
                    android:paddingTop="5dp"
                    android:text="@string/musicph"
                    android:textColor="@color/darkgray"
                    android:textSize="18sp" />
            </RelativeLayout>

            <ImageView
                android:id="@+id/img_dialog"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginBottom="5dp"
                android:scaleType="centerCrop"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>


        <EditText
            android:id="@+id/edit1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:hint="@string/musicName"
            android:inputType="text" >

            <requestFocus />
        </EditText>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:visibility="invisible"
            >


            <LinearLayout
                android:id="@+id/linCacel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:background="@drawable/round_fill_orange"
                android:orientation="horizontal"
                android:padding="8dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/cacel1"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:background="@drawable/round_fill_orange"
                android:orientation="horizontal"
                android:padding="8dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/save"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>